src/test/deca/context/valid/pierre/testAllTrees.deca
{
    int x = 1 ;
    int y = x + 1;
    boolean valid = (! false) && (true || true) ;
    while ( x < y ) {
        x = y % x;
        x = x + 0.5;
        if ( x == 0.5 ) {
            println("taunt de ness");
        } else {}
    }
}
            
 