src/test/deca/context/invalid/pierre/condition_not_bool.deca
{
    if ( 1 + 1 ) {
        println("NOK");
    }
}